--- a/cnn_model.ipynb
+++ b/cnn_model.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tqdm'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcv2\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtqdm\u001b[39;00m \u001b[39mimport\u001b[39;00m tqdm\n\u001b[1;32m      8\u001b[0m DATADIR \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m/Users/dejitzen/Downloads/Datasets\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m CATEGORIES \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39mDog\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mCat\u001b[39m\u001b[39m\"\u001b[39m]\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tqdm'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -166,17 +178,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpickle\u001b[39;00m\n\u001b[1;32m      3\u001b[0m pickle_out \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mX.pickle\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m----> 4\u001b[0m pickle\u001b[39m.\u001b[39mdump(X, pickle_out)\n\u001b[1;32m      5\u001b[0m pickle_out\u001b[39m.\u001b[39mclose()\n\u001b[1;32m      7\u001b[0m pickle_out \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39my.pickle\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mwb\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# import pickle\n",
+    "import pickle\n",
     "\n",
-    "# pickle_out = open(\"X.pickle\", \"wb\")\n",
-    "# pickle.dump(X, pickle_out)\n",
-    "# pickle_out.close()\n",
+    "pickle_out = open(\"X.pickle\", \"wb\")\n",
+    "pickle.dump(X, pickle_out)\n",
+    "pickle_out.close()\n",
     "\n",
-    "# pickle_out = open(\"y.pickle\", \"wb\")\n",
-    "# pickle.dump(y, pickle_out)\n",
-    "# pickle_out.close()"
+    "pickle_out = open(\"y.pickle\", \"wb\")\n",
+    "pickle.dump(y, pickle_out)\n",
+    "pickle_out.close()"
    ]
   },
   {
@@ -193,38 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/6\n",
-      "546/546 [==============================] - 49s 89ms/step - loss: 0.6176 - accuracy: 0.6492 - val_loss: 0.5496 - val_accuracy: 0.7160\n",
-      "Epoch 2/6\n",
-      "546/546 [==============================] - 48s 88ms/step - loss: 0.5042 - accuracy: 0.7554 - val_loss: 0.5173 - val_accuracy: 0.7442\n",
-      "Epoch 3/6\n",
-      "546/546 [==============================] - 47s 86ms/step - loss: 0.4291 - accuracy: 0.7993 - val_loss: 0.4805 - val_accuracy: 0.7892\n",
-      "Epoch 4/6\n",
-      "546/546 [==============================] - 48s 89ms/step - loss: 0.3547 - accuracy: 0.8414 - val_loss: 0.4716 - val_accuracy: 0.7872\n",
-      "Epoch 5/6\n",
-      "546/546 [==============================] - 47s 87ms/step - loss: 0.2683 - accuracy: 0.8861 - val_loss: 0.4992 - val_accuracy: 0.7872\n",
-      "Epoch 6/6\n",
-      "546/546 [==============================] - 48s 89ms/step - loss: 0.1770 - accuracy: 0.9313 - val_loss: 0.6105 - val_accuracy: 0.7834\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.src.callbacks.History at 0x3b75a15a0>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from keras.models import Sequential, Model\n",
@@ -291,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
