--- a/cnn_model.ipynb
+++ b/cnn_model.ipynb
@@ -168,15 +168,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import pickle\n",
+    "import pickle\n",
     "\n",
-    "# pickle_out = open(\"X.pickle\", \"wb\")\n",
-    "# pickle.dump(X, pickle_out)\n",
-    "# pickle_out.close()\n",
+    "pickle_out = open(\"X.pickle\", \"wb\")\n",
+    "pickle.dump(X, pickle_out)\n",
+    "pickle_out.close()\n",
     "\n",
-    "# pickle_out = open(\"y.pickle\", \"wb\")\n",
-    "# pickle.dump(y, pickle_out)\n",
-    "# pickle_out.close()"
+    "pickle_out = open(\"y.pickle\", \"wb\")\n",
+    "pickle.dump(y, pickle_out)\n",
+    "pickle_out.close()"
    ]
   },
   {
@@ -193,38 +193,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/6\n",
-      "546/546 [==============================] - 49s 89ms/step - loss: 0.6176 - accuracy: 0.6492 - val_loss: 0.5496 - val_accuracy: 0.7160\n",
-      "Epoch 2/6\n",
-      "546/546 [==============================] - 48s 88ms/step - loss: 0.5042 - accuracy: 0.7554 - val_loss: 0.5173 - val_accuracy: 0.7442\n",
-      "Epoch 3/6\n",
-      "546/546 [==============================] - 47s 86ms/step - loss: 0.4291 - accuracy: 0.7993 - val_loss: 0.4805 - val_accuracy: 0.7892\n",
-      "Epoch 4/6\n",
-      "546/546 [==============================] - 48s 89ms/step - loss: 0.3547 - accuracy: 0.8414 - val_loss: 0.4716 - val_accuracy: 0.7872\n",
-      "Epoch 5/6\n",
-      "546/546 [==============================] - 47s 87ms/step - loss: 0.2683 - accuracy: 0.8861 - val_loss: 0.4992 - val_accuracy: 0.7872\n",
-      "Epoch 6/6\n",
-      "546/546 [==============================] - 48s 89ms/step - loss: 0.1770 - accuracy: 0.9313 - val_loss: 0.6105 - val_accuracy: 0.7834\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.src.callbacks.History at 0x3b75a15a0>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from keras.models import Sequential, Model\n",
@@ -291,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4
  },
